Update answer on model-selector methods.

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2066,7 +2066,7 @@
     "\n",
     "The BIC approach learns models significantly faster than CV, which is a plus. However, from what I've seen in this small sample, it tends to prefer more complicated models than CV (BIC tends to choose more model states than CV). This makes me worry about overfitting to the training data.\n",
     "\n",
-    "There are some aspects of the DIC approach that I like. I like that it chooses the model that best distinguishes a sign from all other signs. As long as a large number of signs used in training, the DIC approach should be effective at choosing a model that learns the particular features of a sign, distinguishing a sign even from other similar signs. However, if the DIC approach is used with just a few different signs, I'm afraid it won't model the signs accurately; I'm afraid the model will overfit to just the differences between a given sign and the few other signs in the data, but it might fair poorly at recognizing the sign outside the training data."
+    "There are some aspects of the DIC approach that I like. I like that it chooses the model that best distinguishes a sign from all other signs. As long as a large number of signs used in training, the DIC approach should be effective at choosing a model that learns the particular features of a sign, distinguishing a sign even from other similar signs. However, if the DIC approach is used with just a few different signs, I'm afraid it won't model the signs accurately; I'm afraid the model will overfit to just the differences between a given sign and the few other signs in the data, but it might fair poorly, compared to the CV method, at recognizing the sign outside the training data. The DIC approach has chosen more states per model than CV, except for the case of FISH, which might indicate DIC overfits the training data, compared to CV."
    ]
   },
   {
@@ -2080,15 +2080,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      ".."
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 127.245s\n",
+      "\n",
+      "OK\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2114,11 +2128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of word models returned = 112\n"
+     ]
+    }
+   ],
    "source": [
     "# autoreload for automatically reloading changes made in my_model_selectors and my_recognizer\n",
     "%load_ext autoreload\n",
@@ -2154,11 +2174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of test set items: 178\n",
+      "Number of test set sentences: 40\n"
+     ]
+    }
+   ],
    "source": [
     "test_set = asl.build_test(features_ground)\n",
     "print(\"Number of test set items: {}\".format(test_set.num_items))\n",
