--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2205,30 +2205,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO implement the recognize method in my_recognizer\n",
+    "# implement the recognize method in my_recognizer\n",
     "from my_recognizer import recognize\n",
     "from asl_utils import show_errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.6179775280898876\n",
+      "Total correct: 68 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN *IX HOMEWORK                                             JOHN WRITE HOMEWORK\n",
+      "    7: JOHN *VISIT *IX *VISIT                                        JOHN CAN GO CAN\n",
+      "   12: JOHN *BOX *GO1 CAN                                            JOHN CAN GO CAN\n",
+      "   21: JOHN *MARY *MARY *MARY *IX *FUTURE *MARY *MARY                JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *WOMAN IX *JOHN IX                                       JOHN LIKE IX IX IX\n",
+      "   28: JOHN *MARY IX IX IX                                           JOHN LIKE IX IX IX\n",
+      "   30: JOHN *CORN *PUTASIDE IX *WOMAN                                JOHN LIKE IX IX IX\n",
+      "   36: MARY *JOHN *SHOULD *NOT *FUTURE1 *MARY                        MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *CHINA IX *MARY *GIVE1 *SOMETHING-ONE                         JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *NOT BUY HOUSE                                           JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *TEACHER BUY CAR *MARY                                  FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN *JOHN *JOHN BUY HOUSE                                    JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: JOHN *JOHN *IX *WOMAN                                         JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN *JOHN *HOMEWORK *WOMAN HOUSE                             JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *JOHN VISIT MARY                                         JOHN WILL VISIT MARY\n",
+      "   74: JOHN *JOHN *GIVE1 *IX                                         JOHN NOT VISIT MARY\n",
+      "   77: *JOHN BLAME MARY                                              ANN BLAME MARY\n",
+      "   84: *JOHN *CAR *IX *VIDEOTAPE                                     IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: JOHN *JOHN GIVE *IX *GIVE1 *CAR *CAN                          JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: *MARY *GIVE1 IX *IX WOMAN *MARY                               JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX *JOHN *JOHN *IX *IX                                  JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: *JOHN NEW CAR *MANY                                           POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *JOHN                                                    JOHN LEG\n",
+      "  107: *MARY *JOHN *STUDENT *MARY *JOHN                              JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *JOHN *BOOK                                                   WOMAN ARRIVE\n",
+      "  113: *JOHN CAR *MARY *GIVE1 *BUY1                                  IX CAR BLUE SUE BUY\n",
+      "  119: *JOHN *BUY1 *WHAT CAR *MARY                                   SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *CAR BOOK                                                JOHN READ BOOK\n",
+      "  139: JOHN *ARRIVE WHAT *IX *VIDEOTAPE                              JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY *IX WHAT BOOK                                        JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE *WHO *MARY                                               LOVE JOHN WHO\n",
+      "  167: *MARY *SHOULD *OLD LOVE *IX                                   JOHN IX SAY LOVE MARY\n",
+      "  171: JOHN *JOHN BLAME                                              JOHN MARY BLAME\n",
+      "  174: *JOHN *JOHN GIVE1 *MARY *CAR                                  PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: JOHN ARRIVE                                                   JOHN ARRIVE\n",
+      "  184: ALL *JOHN *GIVE1 TEACHER *MARY                                ALL BOY GIVE TEACHER APPLE\n",
+      "  189: JOHN *IX *GIVE1 *ARRIVE                                       JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *IX GIRL BOX                                             JOHN GIVE GIRL BOX\n",
+      "  199: *JOHN *ARRIVE *MARY                                           LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *MARY *IX *IX BUY HOUSE                                  JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO Choose a feature set and model selector\n",
-    "features = features_ground # change as needed\n",
-    "model_selector = SelectorConstant # change as needed\n",
+    "import importlib, my_model_selectors\n",
+    "importlib.reload(my_model_selectors)\n",
+    "from my_model_selectors import SelectorDIC\n",
     "\n",
-    "# TODO Recognize the test set and display the result with the show_errors method\n",
+    "# Choose a feature set and model selector\n",
+    "features = features_norm_grnd_delta\n",
+    "model_selector = SelectorDIC\n",
+    "\n",
+    "# Recognize the test set and display the result with the show_errors method\n",
     "models = train_all_words(features, model_selector)\n",
     "test_set = asl.build_test(features)\n",
     "probabilities, guesses = recognize(models, test_set)\n",
@@ -2237,26 +2289,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.5730337078651685\n",
+      "Total correct: 76 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN *IX *MOVIE                                               JOHN WRITE HOMEWORK\n",
+      "    7: JOHN *STUDENT GO *TEACHER                                     JOHN CAN GO CAN\n",
+      "   12: JOHN CAN *GO1 CAN                                             JOHN CAN GO CAN\n",
+      "   21: JOHN FISH WONT *MARY *CAR *FUTURE *SHOULD *MARY               JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *IX IX IX IX                                             JOHN LIKE IX IX IX\n",
+      "   28: JOHN *MARY IX IX IX                                           JOHN LIKE IX IX IX\n",
+      "   30: JOHN *CORN *NOT IX IX                                         JOHN LIKE IX IX IX\n",
+      "   36: MARY *VIDEOTAPE *TELL *LIKE *GIVE3 *MARY                      MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *FRANK IX *MARY *WHO *VIDEOTAPE                               JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *FUTURE *FINISH HOUSE                                    JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *VEGETABLE BUY CAR *MARY                                FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN *IX *JOHN BUY *BOOK                                      JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *IX *JOHN *IX *IX                                             JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN *IX *READ BUY HOUSE                                      JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *TEACHER VISIT *CAR                                      JOHN WILL VISIT MARY\n",
+      "   74: JOHN *IX *VIDEOTAPE MARY                                      JOHN NOT VISIT MARY\n",
+      "   77: *JOHN BLAME MARY                                              ANN BLAME MARY\n",
+      "   84: *NEW *NEW *BROTHER *NEW-YORK                                  IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: JOHN IX GIVE *IX *ALL NEW *CAN                                JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN *GIVE1 IX *IX *IX BOOK                                   JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX IX *IX *IX *VISIT                                    JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: *JOHN NEW CAR *TEACHER                                        POSS NEW CAR BREAK-DOWN\n",
+      "  105: *FRANK *JOHN                                                  JOHN LEG\n",
+      "  107: JOHN POSS *HAVE HAVE *JOHN                                    JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *IX ARRIVE                                                    WOMAN ARRIVE\n",
+      "  113: *JOHN *PEOPLE *MARY *CORN *BUY1                               IX CAR BLUE SUE BUY\n",
+      "  119: *JOHN *BUY1 *WHAT CAR *MARY                                   SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *PEOPLE BOOK                                             JOHN READ BOOK\n",
+      "  139: JOHN BUY WHAT *WHO *STOLEN                                    JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY *IX WHAT BOOK                                        JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE JOHN *MARY                                               LOVE JOHN WHO\n",
+      "  167: *MARY *ALL *IX LOVE *HERE                                     JOHN IX SAY LOVE MARY\n",
+      "  171: JOHN MARY BLAME                                               JOHN MARY BLAME\n",
+      "  174: *CAR *JOHN GIVE1 *MARY *WANT                                  PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: JOHN ARRIVE                                                   JOHN ARRIVE\n",
+      "  184: *GIVE3 *VIDEOTAPE *GIVE1 TEACHER *MARY                        ALL BOY GIVE TEACHER APPLE\n",
+      "  189: *IX *BILL *VIDEOTAPE *ARRIVE                                  JOHN GIVE GIRL BOX\n",
+      "  193: *IX *IX *CORN BOX                                             JOHN GIVE GIRL BOX\n",
+      "  199: *JOHN *SELL *JOHN                                             LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *WHO *WHO *POSS BUY HOUSE                                JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO Choose a feature set and model selector\n",
-    "# TODO Recognize the test set and display the result with the show_errors method"
+    "import importlib, my_model_selectors\n",
+    "importlib.reload(my_model_selectors)\n",
+    "from my_model_selectors import SelectorCV\n",
+    "\n",
+    "# Choose a feature set and model selector\n",
+    "features = features_norm_grnd_delta\n",
+    "model_selector = SelectorCV\n",
+    "\n",
+    "# Recognize the test set and display the result with the show_errors method\n",
+    "models = train_all_words(features, model_selector)\n",
+    "test_set = asl.build_test(features)\n",
+    "probabilities, guesses = recognize(models, test_set)\n",
+    "show_errors(guesses, test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.5\n",
+      "Total correct: 89 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN *BUY *ARRIVE                                             JOHN WRITE HOMEWORK\n",
+      "    7: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
+      "   12: JOHN CAN *HAVE *HOUSE                                         JOHN CAN GO CAN\n",
+      "   21: JOHN *VIDEOTAPE WONT EAT *STUDENT *CAR *VISIT *EAT            JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *MARY *LOVE *MARY *LOVE                                  JOHN LIKE IX IX IX\n",
+      "   28: JOHN *MARY *MARY IX *LOVE                                     JOHN LIKE IX IX IX\n",
+      "   30: JOHN LIKE *LOVE *BILL *LOVE                                   JOHN LIKE IX IX IX\n",
+      "   36: MARY *NOT *YESTERDAY *GIVE *MARY *MARY                        MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *VEGETABLE *BILL *FUTURE1 *VEGETABLE LOVE                     JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *JOHN BUY HOUSE                                          JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *SEE BUY CAR *CAR                                       FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN SHOULD NOT BUY HOUSE                                     JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *MARY VISIT MARY                                        JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN FUTURE *VISIT BUY HOUSE                                  JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FINISH *BLAME MARY                                      JOHN WILL VISIT MARY\n",
+      "   74: JOHN *MARY *GIVE *LOVE                                        JOHN NOT VISIT MARY\n",
+      "   77: *JOHN BLAME MARY                                              ANN BLAME MARY\n",
+      "   84: *IX *ARRIVE *FUTURE BOOK                                      IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *SOMETHING-ONE *GIVE1 *THROW *FRANK *GO NEW COAT              JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN *YESTERDAY IX *IX *VISIT *CHOCOLATE                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *GIVE1 IX *IX WOMAN BOOK                                 JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: POSS NEW CAR BREAK-DOWN                                       POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *JOHN                                                    JOHN LEG\n",
+      "  107: JOHN POSS *NEW *MARY *MARY                                    JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *JOHN ARRIVE                                                  WOMAN ARRIVE\n",
+      "  113: *JOHN CAR *JOHN *JOHN *BOX                                    IX CAR BLUE SUE BUY\n",
+      "  119: *MARY *BUY1 *VISIT CAR *VISIT                                 SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *HOUSE *COAT                                             JOHN READ BOOK\n",
+      "  139: JOHN *BUY1 WHAT YESTERDAY BOOK                                JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY YESTERDAY WHAT BOOK                                  JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE JOHN WHO                                                 LOVE JOHN WHO\n",
+      "  167: JOHN *LEAVE *NOT LOVE MARY                                    JOHN IX SAY LOVE MARY\n",
+      "  171: JOHN *JOHN BLAME                                              JOHN MARY BLAME\n",
+      "  174: *NEW *GIVE1 GIVE1 *MARY *CAN                                  PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: *WOMAN ARRIVE                                                 JOHN ARRIVE\n",
+      "  184: *IX BOY *GIVE1 TEACHER APPLE                                  ALL BOY GIVE TEACHER APPLE\n",
+      "  189: JOHN *JOHN *FUTURE1 BOX                                       JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *IX *MOTHER BOX                                          JOHN GIVE GIRL BOX\n",
+      "  199: *JOHN CHOCOLATE WHO                                           LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *WHO *GIVE *LIKE BUY HOUSE                               JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO Choose a feature set and model selector\n",
-    "# TODO Recognize the test set and display the result with the show_errors method"
+    "import importlib, my_model_selectors\n",
+    "importlib.reload(my_model_selectors)\n",
+    "from my_model_selectors import SelectorCV\n",
+    "\n",
+    "# Choose a feature set and model selector\n",
+    "features = features_custom\n",
+    "model_selector = SelectorCV\n",
+    "\n",
+    "# Recognize the test set and display the result with the show_errors method\n",
+    "models = train_all_words(features, model_selector)\n",
+    "test_set = asl.build_test(features)\n",
+    "probabilities, guesses = recognize(models, test_set)\n",
+    "show_errors(guesses, test_set)"
    ]
   },
   {
