--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2770,7 +2770,7 @@
     "\n",
     "#### Some Implementation Details\n",
     "\n",
-    "We choose the word `W` that maximizes `P(v,pw | W)`, where `v` is the video input for the word and `pw` is the preceding word in the sentence. This means we choose `W` to maximize `P(W | v) * P(W | pw)` (note the conditional independence of `v` and `pw`). The value of `probabilities` will give us a proxy for `P(W | v)`, and the 1-gram data will be used to calculate `P(W | pw)`.\n",
+    "We choose the word `W` that maximizes `P(v,pw | W)`, where `v` is the video input for the word and `pw` is the preceding word in the sentence. This means we choose `W` to maximize `P(W | v) * P(W | pw) * P(W)` (note the conditional independence of `v` and `pw`). The value of `probabilities` will give us a proxy for `P(W | v)`, and the 1-gram data will be used to calculate `P(W | pw)`.\n",
     "\n",
     "The recognizer for this SLM takes a full sentence and calculates the most likely interpretation of the sentence, and the words in this interpretation are used at the recognizer's \"guess\" for the word. See `my_slm.py` for how the most likely interpretation of a sentence is calculated, using a variation of the Viterbi algorithm, inspired by Peter Norvig's [work](http://norvig.com/ngrams/) from Beautiful Data."
    ]
