--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2434,268 +2434,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['JOHN',\n",
-       " 'WRITE',\n",
-       " 'HOMEWORK',\n",
-       " 'JOHN',\n",
-       " 'CAN',\n",
-       " 'GO',\n",
-       " 'CAN',\n",
-       " 'JOHN',\n",
-       " 'CAN',\n",
-       " 'GO',\n",
-       " 'CAN',\n",
-       " 'JOHN',\n",
-       " 'FISH',\n",
-       " 'WONT',\n",
-       " 'EAT',\n",
-       " 'BUT',\n",
-       " 'CAN',\n",
-       " 'EAT',\n",
-       " 'CHICKEN',\n",
-       " 'JOHN',\n",
-       " 'LIKE',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'JOHN',\n",
-       " 'LIKE',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'JOHN',\n",
-       " 'LIKE',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'IX',\n",
-       " 'MARY',\n",
-       " 'VEGETABLE',\n",
-       " 'KNOW',\n",
-       " 'IX',\n",
-       " 'LIKE',\n",
-       " 'CORN1',\n",
-       " 'JOHN',\n",
-       " 'IX',\n",
-       " 'THINK',\n",
-       " 'MARY',\n",
-       " 'LOVE',\n",
-       " 'JOHN',\n",
-       " 'MUST',\n",
-       " 'BUY',\n",
-       " 'HOUSE',\n",
-       " 'FUTURE',\n",
-       " 'JOHN',\n",
-       " 'BUY',\n",
-       " 'CAR',\n",
-       " 'SHOULD',\n",
-       " 'JOHN',\n",
-       " 'SHOULD',\n",
-       " 'NOT',\n",
-       " 'BUY',\n",
-       " 'HOUSE',\n",
-       " 'JOHN',\n",
-       " 'DECIDE',\n",
-       " 'VISIT',\n",
-       " 'MARY',\n",
-       " 'JOHN',\n",
-       " 'FUTURE',\n",
-       " 'NOT',\n",
-       " 'BUY',\n",
-       " 'HOUSE',\n",
-       " 'JOHN',\n",
-       " 'WILL',\n",
-       " 'VISIT',\n",
-       " 'MARY',\n",
-       " 'JOHN',\n",
-       " 'NOT',\n",
-       " 'VISIT',\n",
-       " 'MARY',\n",
-       " 'ANN',\n",
-       " 'BLAME',\n",
-       " 'MARY',\n",
-       " 'IX-1P',\n",
-       " 'FIND',\n",
-       " 'SOMETHING-ONE',\n",
-       " 'BOOK',\n",
-       " 'JOHN',\n",
-       " 'IX',\n",
-       " 'GIVE',\n",
-       " 'MAN',\n",
-       " 'IX',\n",
-       " 'NEW',\n",
-       " 'COAT',\n",
-       " 'JOHN',\n",
-       " 'GIVE',\n",
-       " 'IX',\n",
-       " 'SOMETHING-ONE',\n",
-       " 'WOMAN',\n",
-       " 'BOOK',\n",
-       " 'JOHN',\n",
-       " 'GIVE',\n",
-       " 'IX',\n",
-       " 'SOMETHING-ONE',\n",
-       " 'WOMAN',\n",
-       " 'BOOK',\n",
-       " 'POSS',\n",
-       " 'NEW',\n",
-       " 'CAR',\n",
-       " 'BREAK-DOWN',\n",
-       " 'JOHN',\n",
-       " 'LEG',\n",
-       " 'JOHN',\n",
-       " 'POSS',\n",
-       " 'FRIEND',\n",
-       " 'HAVE',\n",
-       " 'CANDY',\n",
-       " 'WOMAN',\n",
-       " 'ARRIVE',\n",
-       " 'IX',\n",
-       " 'CAR',\n",
-       " 'BLUE',\n",
-       " 'SUE',\n",
-       " 'BUY',\n",
-       " 'SUE',\n",
-       " 'BUY',\n",
-       " 'IX',\n",
-       " 'CAR',\n",
-       " 'BLUE',\n",
-       " 'JOHN',\n",
-       " 'READ',\n",
-       " 'BOOK',\n",
-       " 'JOHN',\n",
-       " 'BUY',\n",
-       " 'WHAT',\n",
-       " 'YESTERDAY',\n",
-       " 'BOOK',\n",
-       " 'JOHN',\n",
-       " 'BUY',\n",
-       " 'YESTERDAY',\n",
-       " 'WHAT',\n",
-       " 'BOOK',\n",
-       " 'LOVE',\n",
-       " 'JOHN',\n",
-       " 'WHO',\n",
-       " 'JOHN',\n",
-       " 'IX',\n",
-       " 'SAY',\n",
-       " 'LOVE',\n",
-       " 'MARY',\n",
-       " 'JOHN',\n",
-       " 'MARY',\n",
-       " 'BLAME',\n",
-       " 'PEOPLE',\n",
-       " 'GROUP',\n",
-       " 'GIVE1',\n",
-       " 'JANA',\n",
-       " 'TOY',\n",
-       " 'JOHN',\n",
-       " 'ARRIVE',\n",
-       " 'ALL',\n",
-       " 'BOY',\n",
-       " 'GIVE',\n",
-       " 'TEACHER',\n",
-       " 'APPLE',\n",
-       " 'JOHN',\n",
-       " 'GIVE',\n",
-       " 'GIRL',\n",
-       " 'BOX',\n",
-       " 'JOHN',\n",
-       " 'GIVE',\n",
-       " 'GIRL',\n",
-       " 'BOX',\n",
-       " 'LIKE',\n",
-       " 'CHOCOLATE',\n",
-       " 'WHO',\n",
-       " 'JOHN',\n",
-       " 'TELL',\n",
-       " 'MARY',\n",
-       " 'IX-1P',\n",
-       " 'BUY',\n",
-       " 'HOUSE']"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_set.wordlist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{2: [0, 1, 2],\n",
-       " 7: [3, 4, 5, 6],\n",
-       " 12: [7, 8, 9, 10],\n",
-       " 21: [11, 12, 13, 14, 15, 16, 17, 18],\n",
-       " 25: [19, 20, 21, 22, 23],\n",
-       " 28: [24, 25, 26, 27, 28],\n",
-       " 30: [29, 30, 31, 32, 33],\n",
-       " 36: [34, 35, 36, 37, 38, 39],\n",
-       " 40: [40, 41, 42, 43, 44],\n",
-       " 43: [45, 46, 47, 48],\n",
-       " 50: [49, 50, 51, 52, 53],\n",
-       " 54: [54, 55, 56, 57, 58],\n",
-       " 57: [59, 60, 61, 62],\n",
-       " 67: [63, 64, 65, 66, 67],\n",
-       " 71: [68, 69, 70, 71],\n",
-       " 74: [72, 73, 74, 75],\n",
-       " 77: [76, 77, 78],\n",
-       " 84: [79, 80, 81, 82],\n",
-       " 89: [83, 84, 85, 86, 87, 88, 89],\n",
-       " 90: [90, 91, 92, 93, 94, 95],\n",
-       " 92: [96, 97, 98, 99, 100, 101],\n",
-       " 100: [102, 103, 104, 105],\n",
-       " 105: [106, 107],\n",
-       " 107: [108, 109, 110, 111, 112],\n",
-       " 108: [113, 114],\n",
-       " 113: [115, 116, 117, 118, 119],\n",
-       " 119: [120, 121, 122, 123, 124],\n",
-       " 122: [125, 126, 127],\n",
-       " 139: [128, 129, 130, 131, 132],\n",
-       " 142: [133, 134, 135, 136, 137],\n",
-       " 158: [138, 139, 140],\n",
-       " 167: [141, 142, 143, 144, 145],\n",
-       " 171: [146, 147, 148],\n",
-       " 174: [149, 150, 151, 152, 153],\n",
-       " 181: [154, 155],\n",
-       " 184: [156, 157, 158, 159, 160],\n",
-       " 189: [161, 162, 163, 164],\n",
-       " 193: [165, 166, 167, 168],\n",
-       " 199: [169, 170, 171],\n",
-       " 201: [172, 173, 174, 175, 176, 177]}"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_set.sentences_index"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question 3:**  Summarize the error results from three combinations of features and model selectors.  What was the \"best\" combination and why?  What additional information might we use to improve our WER?  For more insight on improving WER, take a look at the introduction to Part 4.\n",
     "\n",
-    "**Answer 3:**"
+    "**Answer 3:** The cross-validation (CV) approach, combined with my custom feature set, performed best at a WER of 0.5. I believe the CV approach performed better than the DIC and BIC approaches because it was able to generalize better from the training data, which means it could perform better on new video frames. The fact that DIC and BIC tended to use many more states to model a word, which we saw in part 2, hints at overfitting on their part.\n",
+    "\n",
+    "Also, my cutsom feature set used normalized grounds and their deltas. Using grounds is helpful because the significance of a sign is due to the relative position of the signer's hands and face, rather than their postion relative to the camera's frame. And the normalization compensated for different sizes of speakers. Finally, the deltas added information about how long transitions take, allowing the model to not only incorporate hand position information but also information on how quickly hands moved from position to position.\n",
+    "\n",
+    "We could use more information from the video to improve WER. Not only is hand and nose position important; the way the hands are rotated also communicate information about the sign, so hand rotation could be used as a feature. For example, in the sign for BOOK, hand position doesn't change much throughout, but hand rotation does. Sign language also makes use of fingers to communicate meaning, so perhaps we could use information on which fingers are extended in a video frame.\n",
+    "\n",
+    "Futhermore, we could use the context of what other words are appearing in the sentence with the given sign. I address this issue with a statistical language model (SLM) in the optional part 4 below."
    ]
   },
   {
@@ -2770,7 +2520,7 @@
     "\n",
     "#### Some Implementation Details\n",
     "\n",
-    "We choose the word `W` that maximizes `P(v,pw | W)`, where `v` is the video input for the word and `pw` is the preceding word in the sentence. This means we choose `W` to maximize `P(W | v) * P(W | pw) * P(W)` (note the conditional independence of `v` and `pw`). The value of `probabilities` will give us a proxy for `P(W | v)`, and the 1-gram data will be used to calculate `P(W | pw)`.\n",
+    "We choose the word `W` that maximizes `P(v,pw | W)`, where `v` is the video input for the word and `pw` is the preceding word in the sentence. This means we choose `W` to maximize `P(W | v) * P(W | pw) * P(W)` (note the conditional independence of `v` and `pw`). The values of `probabilities` give us a proxy for `P(W | v)`, the 2-gram data a proxy for `P(W | pw)`, and the 1-gram data a proxy for `P(W)`.\n",
     "\n",
     "The recognizer for this SLM takes a full sentence and calculates the most likely interpretation of the sentence, and the words in this interpretation are used at the recognizer's \"guess\" for the word. See `my_slm.py` for how the most likely interpretation of a sentence is calculated, using a variation of the Viterbi algorithm, inspired by Peter Norvig's [work](http://norvig.com/ngrams/) from Beautiful Data."
    ]
@@ -2784,8 +2534,31 @@
    "outputs": [],
    "source": [
     "# create a DataFrame of log likelihoods for the test word items\n",
-    "df_probs = pd.DataFrame(data=probabilities)\n",
-    "df_probs.head()"
+    "# df_probs = pd.DataFrame(data=probabilities)\n",
+    "# df_probs.head()\n",
+    "probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_set.wordlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_set.sentences_index"
    ]
   }
  ],
