--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2338,7 +2338,7 @@
    "source": [
     "### My SLM\n",
     "\n",
-    "My code that implements the SLM is in `my_slm.py`.\n",
+    "My code that implements the SLM is encapsulated in the `slm_recognize` function at the bottom of `my_recognizer.py`.\n",
     "\n",
     "My SLM is simple. It assumes the likelihood of a word is dependent on the word that precedes it and the video frames assigned to it. It uses 1-gram data for considering the preceding word, and it uses the models from part 3 for calculating the likelihood of a word from the video input. Also, a simplifying assumption is made: we assume the probabilities of the video data and of the preceding word are independent, given the current word. This simplifying assumption likely does not reflect the real world. For example, the first few frames of DOG in the phrase PET DOG probably look different from the phrase OWN DOG, due to transitions from different hand positions at the end of the words PET and OWN. However, this simplifying assumption is still useful for implementing a relatively straight-forward SLM.\n",
     "\n",
